force-app/main/default/objects/Onboarding_Document_Rule__c/Onboarding_Document_Rule__c.object-meta.xml
<CustomObject>
    <label>Onboarding Document Rule</label>
    <nameField>
        <label>Onboarding Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onboarding Document Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>