force-app/main/default/objects/Onboarding_Document_Rule__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>