force-app/main/default/objects/Onboarding_Document_Rule__c/fields/Docusign_Gen_Template__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Gen_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Docusign Gen Template</label>
    <referenceTo>dfsle__GenTemplate__c</referenceTo>
    <relationshipLabel>Onboarding Document Rules</relationshipLabel>
    <relationshipName>Onboarding_Document_Rules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>